home page template completed

--- a/mock-exam-app/src/styles.scss
+++ b/mock-exam-app/src/styles.scss
@@ -2,6 +2,12 @@
 
 @import 'sass/variables';
 
-
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
+
+@import 'sass/global';
+
+/* Components */
+@import 'sass/components/typography';
+
+
