--- a/mock-exam-app/src/sass/_variables.scss
+++ b/mock-exam-app/src/sass/_variables.scss
@@ -1,6 +1,6 @@
 // Define application specific theme and colors
-$blue-dark: #9352c5;
-$blue-light: #7460c7;
+$blue-dark: #6c3696;
+$blue-light: #c57fe6;
 $pink: #d447c8;
 
 $white: #fff;
