summary page added

--- a/mock-exam-app/src/app/question/question.component.html
+++ b/mock-exam-app/src/app/question/question.component.html
@@ -6,28 +6,28 @@
   </div>
 
   <div class="question_content">
-    <app-question-details [question] = "question"></app-question-details>
+    <app-question-details [question]="question" [exam]="exam"></app-question-details>
   </div>
 
   <div class="question__answers">
-    <app-question-answers [question]="question"></app-question-answers>
+    <app-question-answers [question]="question" [exam]="exam"></app-question-answers>
   </div>
 
   {{question?.selectedAnswer | json}}
 
   <div class="actions">
     <!-- Always Display Save option -->
-    <button class="btn-primary mr-3 mt-2">Save</button>
+    <button *ngIf="!exam?.isSubmitted" class="btn-primary mr-3 mt-2 font-weight-bold" (click)="save(question)">Save</button>
     <!-- Display Previous button except first question -->
     <button *ngIf="!isItFirstQuestion()" (click)="moveToPrevQuestion()" class="btn-outline-primary mr-3 mt-2 font-weight-bold">Prev</button>
     <!-- Display Next option except last question -->
     <button *ngIf="!isItLastQuestion()" (click)="moveToNextQuestion()" class="btn-outline-primary mr-3 mt-2 font-weight-bold">Next</button>
     <!-- Display Submit option only for last question and exam's display solution option set to display solution at the end -->
-    <button *ngIf="canDisplaySubmitOption()" class="btn-success mr-3 mt-2">Submit</button>
+    <button *ngIf="canDisplaySubmitOption()" class="btn-success mr-3 mt-2 font-weight-bold" (click)="submit()">Submit</button>
   </div>
 
   <div *ngIf="canDisplaySolution()" class="question_solution mt-3 p-4" style="border: 1px solid purple;">
-    <app-question-solution [question]="question"></app-question-solution>
+    <app-question-solution [question]="question" [exam]="exam"></app-question-solution>
   </div>
 
 </div>
