--- a/mock-exam-app/src/styles.scss
+++ b/mock-exam-app/src/styles.scss
@@ -11,3 +11,6 @@
 @import 'sass/components/typography';
 
 
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
