summary page formatted and mat icon added

--- a/mock-exam-app/src/app/app.component.html
+++ b/mock-exam-app/src/app/app.component.html
@@ -1,1 +1,4 @@
+<button mat-icon-button color="primary" class="fab-icon fab-icon-home" (click)="home()"><mat-icon>home</mat-icon>
+</button>
+
 <router-outlet></router-outlet>
