--- a/mock-exam-app/src/app/exam/summary/summary.component.html
+++ b/mock-exam-app/src/app/exam/summary/summary.component.html
@@ -19,8 +19,8 @@
 
     <div class="summary-actions row mt-4">
       <div class="col-10 text-center">
-        <button class="btn-primary mr-3" (click)="viewSolutions()">Solutions</button>
-        <button class="btn-primary" (click)="gotoHome()">Home</button>
+        <button class="btn btn-primary mr-3" (click)="viewSolutions()">Solutions</button>
+        <button class="btn btn-primary" (click)="gotoHome()">Home</button>
       </div>
     </div>
 
