--- a/mock-exam-app/src/app/question/question-answers/question-answers.component.html
+++ b/mock-exam-app/src/app/question/question-answers/question-answers.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="!question?.isMultipleAnswerQust; else multipleAnswerTemplate">
   <div class="option" *ngFor="let option of question?.options">
     <label>
-      <input type="radio" [value]="option.id" [(ngModel)]="question.selectedAnswer" name="answers" [disabled]="exam?.isSubmitted!">
+      <input type="radio" [value]="option.id" [(ngModel)]="question.selectedAnswer" name="answers" [disabled]="canDisableInput()">
       {{option.text}}
     </label>
   </div>
@@ -10,7 +10,7 @@
   <div class="option" *ngFor="let option of question?.options">
     <label>
       <input type="checkbox" [value]="option.id" [name]="option.id" (change)="eventAnswered($event, option)"
-      [checked]="isAnswerSelected(option.id)" [disabled]="exam.isSubmitted">
+      [checked]="isAnswerSelected(option.id)" [disabled]="canDisableInput()">
       {{option.text}}
     </label>
   </div>
