--- a/mock-exam-app/src/app/question/question-solution/question-solution.component.html
+++ b/mock-exam-app/src/app/question/question-solution/question-solution.component.html
@@ -1,5 +1,21 @@
-<h6>Solution:</h6>
-  <p class="legend text-success font-weight-bold">Correct Answer: {{question?.solution?.correctAnswers}}</p>
-  <p class="font-weight-bold text-primary">
+<div class="container solution-container">
+  <div class="answer-status">
+
+    <ng-container *ngIf="isAnswerCorrect(); else wrongAnswerTemplate">
+      <label class="text-primary"><mat-icon color="primary">check_circle</mat-icon> <span class="icon-text ml-2">Right Answer</span></label>
+
+    </ng-container>
+    <ng-template #wrongAnswerTemplate>
+      <label class="text-primary"><mat-icon color="primary">clear</mat-icon> <span class="icon-text">Wrong Answer</span></label>
+    </ng-template>
+
+
+
+  </div>
+  <h6>Solution:</h6>
+  <p class="legend text-success solution-answer">Correct Answer: {{question?.solution?.correctAnswers}}</p>
+  <p class="text-primary justify-content-around solution-details">
     {{question?.solution?.explanation}}
 </p>
+
+</div>
