--- a/mock-exam-app/src/app/app.component.html
+++ b/mock-exam-app/src/app/app.component.html
@@ -1,4 +1,14 @@
-<button mat-icon-button color="primary" class="fab-icon fab-icon-home" (click)="home()"><mat-icon>home</mat-icon>
-</button>
+<div class="fab">
+
+  <button mat-icon-button color="primary" class="fab-icon-button" (click)="myprofile()" title="About Me">
+    <mat-icon>account_circle</mat-icon>
+  </button>
+
+  <button mat-icon-button color="primary" class="fab-icon-button" (click)="home()" title="Home">
+    <mat-icon>home</mat-icon>
+  </button>
+
+</div>
+
 
 <router-outlet></router-outlet>
