ui color aligned with brand color

--- a/mock-exam-app/src/app/exam/exam.component.html
+++ b/mock-exam-app/src/app/exam/exam.component.html
@@ -58,7 +58,7 @@
 
   <div class="text-center mb-5">
     <h4>Best of Luck..!</h4>
-    <button class="btn-primary" (click)="startExam()">Launch</button>
+    <button class="btn btn-primary" (click)="startExam()">Launch</button>
   </div>
 
 </div>
