--- a/mock-exam-app/src/sass/_global.scss
+++ b/mock-exam-app/src/sass/_global.scss
@@ -8,8 +8,8 @@ body {
 }
 
 .mat-snack-bar-primary {
-  background: $primary;
-  color : $white;
+  background: $primary !important;
+  color : $white !important;
 }
 
 .fab-icon-button {
