--- a/mock-exam-app/src/app/question/question-solution/question-solution.component.html
+++ b/mock-exam-app/src/app/question/question-solution/question-solution.component.html
@@ -2,17 +2,17 @@
   <div class="answer-status">
 
     <ng-container *ngIf="isAnswerCorrect(); else wrongAnswerTemplate">
-      <label class="text-primary"><mat-icon color="primary">check_circle</mat-icon> <span class="icon-text ml-2">Right Answer</span></label>
+      <label class="text-primary"><mat-icon color="accent">check_circle</mat-icon> <span class="icon-text ml-2">Right Answer</span></label>
 
     </ng-container>
     <ng-template #wrongAnswerTemplate>
-      <label class="text-primary"><mat-icon color="primary">clear</mat-icon> <span class="icon-text">Wrong Answer</span></label>
+      <label class="text-danger"><mat-icon color="warn">clear</mat-icon> <span class="icon-text">Wrong Answer</span></label>
     </ng-template>
 
 
 
   </div>
-  <h6>Solution:</h6>
+  <h5>Solution:</h5>
   <p class="legend text-success solution-answer">Correct Answer: {{question?.solution?.correctAnswers}}</p>
   <p class="text-primary justify-content-around solution-details">
     {{question?.solution?.explanation}}
