--- a/mock-exam-app/src/styles.scss
+++ b/mock-exam-app/src/styles.scss
@@ -3,7 +3,7 @@
 @import 'sass/variables';
 
 /* Importing Bootstrap SCSS file. */
-@import '~bootstrap/scss/bootstrap';
+@import '../node_modules/bootstrap/scss/bootstrap.scss';
 
 @import 'sass/global';
 
