mat icon alignment fixed #34

--- a/mock-exam-app/src/app/app.component.html
+++ b/mock-exam-app/src/app/app.component.html
@@ -1,11 +1,11 @@
 <div class="fab">
 
-  <button mat-icon-button color="primary" class="fab-icon-button" (click)="myprofile()" title="About Me">
+  <button mat-icon-button color="primary" class="float-end" (click)="myprofile()" title="About Me">
     <mat-icon>account_circle</mat-icon>
   </button>
 
-  <button mat-icon-button color="primary" class="fab-icon-button" (click)="home()" title="Home">
-    <mat-icon>home</mat-icon>
+  <button mat-icon-button color="primary" class="float-end" (click)="home()" title="Home">
+    <mat-icon aria-hidden="false" aria-label="Home" fontIcon="home"></mat-icon>
   </button>
 
 </div>
