fix: ts warning fixed #38

--- a/mock-exam-app/src/app/question/question-details/question-details.component.html
+++ b/mock-exam-app/src/app/question/question-details/question-details.component.html
@@ -1,18 +1,18 @@
 <div class="mb-2 text-primary">
-  <h6>Question {{question?.id}}:</h6>
+  <h6>Question {{question.id}}:</h6>
 </div>
 <div class="justify-content-around">
   <p>
-    {{question?.text}}
+    {{question.text}}
   </p>
 </div>
 <div>
   <div>
     <pre class="text-primary font-weight-bold">
-      {{question?.code}}
+      {{question.code}}
     </pre>
   </div>
 
 
-  <p>{{question?.textAfterCode}} </p>
+  <p>{{question.textAfterCode}} </p>
 </div>
