--- a/mock-exam-app/src/app/question/question-solution/question-solution.component.html
+++ b/mock-exam-app/src/app/question/question-solution/question-solution.component.html
@@ -13,9 +13,9 @@
 
   </div>
   <h5>Solution:</h5>
-  <p class="legend text-success solution-answer">Correct Answer: {{question?.solution?.correctAnswers}}</p>
+  <p class="legend text-success solution-answer">Correct Answer: {{question.solution.correctAnswers}}</p>
   <p class="text-primary justify-content-around solution-details">
-    {{question?.solution?.explanation}}
+    {{question.solution.explanation}}
 </p>
 
 </div>
