--- a/mock-exam-app/src/app/exam/summary/summary.component.html
+++ b/mock-exam-app/src/app/exam/summary/summary.component.html
@@ -5,12 +5,12 @@
   <div class="suumary__details">
     <div class="row">
       <div class="result-icon-container col-md-4 col-sm-12 text-center">
-        <img [src]="summary?.iconUrl" alt="Exam Staus" class="result-icon">
+        <img [src]="summary.iconUrl" alt="Exam Staus" class="result-icon">
       </div>
 
       <div class="col-md-8 col-sm-12 mt-4">
         <h3 class="mb-4">{{summary.title}}</h3>
-        <h5><small>Exam:</small> {{summary?.exam?.name}}</h5>
+        <h5><small>Exam:</small> {{summary.exam.name}}</h5>
         <h5><small>Result: </small> <label [class]="summary.result == 'Pass' ? 'text-success' : 'text-danger'">{{summary.result}}</label></h5>
         <h5><small>Scored:</small> {{summary.score}}%</h5>
         <h5><small>Correct Answers:</small> {{summary.correctAnswer}} out of {{summary.exam.noOfQuestions}}</h5>
