feat: Preview exam data.json file feature
 - preview component renamed to new exam component

--- a/src/app/exam/new/new-exam-details.component.html
+++ b/src/app/exam/new/new-exam-details.component.html
@@ -1,15 +1,15 @@
-<div class="container preview">
+<div class="container new-exam">
 
-  <div class="row preview__title">
+  <div class="row new-exam__title">
     <div class="col text-center">
-      <h5>Exam Preview</h5>
+      <h5>New Exam</h5>
       <hr/>
     </div>
   </div>
 
-  <div class="preview__exam">
+  <div class="new-exam__exam">
 
-    <div class="row preview__exam__details">
+    <div class="row new-exam__details">
 
       <div class="col-md-3 col-sm-12 mb-3">
         <label for="examId" class="form-label text-secondary">Exam ID</label>
@@ -65,7 +65,7 @@
       <hr/>
 
       <!--  New Question section    -->
-      <div class="preview__exam__question row">
+      <div class="new-exam__new-question row">
         <h5>New Question</h5>
 
         <div class="col-12 mb-3">
